# adaptics

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  README.md  _abam_8h.html  _abam_8h_source.html  _buf_8h.html  _buf_8h_source.html  _c_f_r_r2_8h.html  _c_f_r_r2_8h_source.html  _c_r_r2_8h.html  _c_r_r2_8h_source.html  _gray_code_8h.html  _gray_code_8h_source.html  _input_8h.html  _input_8h_source.html  _kernel_8h.html  _kernel_8h_source.html  _kernel_layer_8h.html  _kernel_layer_8h_source.html  _layer_8h.html  _layer_8h_source.html  _level2_8h.html  _level2_8h_source.html  _level3_8h.html  _level3_8h_source.html  _level4_8h.html  _level4_8h_source.html  _level5_a_8h.html  _level5_a_8h_source.html  _level5_b_8h.html  _level5_b_8h_source.html  _level6_8h.html  _level6_8h_source.html  _parameters_8h.html  _parameters_8h_source.html  _population_8h.html  (+114 more)
include/evo/: CFRR2.h  CRR2.h  GrayCode.h  Logger.h  Population.h  RoyalRoad.h  Seq.h  Stats.h  constants.h
include/learn/: Abam.h
include/visio/: Buf.h  Input.h  Kernel.h  KernelLayer.h  Layer.h  Level2.h  Level3.h  Level4.h  Level5A.h  Level5B.h  Level6.h  Parameters.h  SparseFrame.h  Utils.h  config.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_7e.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_62.js  classes_69.js  classes_6b.js  classes_72.js  classes_73.js  classes_8.js  (+45 more)
share/3Dformotion/: README  bufferAssignments.xls
share/docfiles/: mainpage.dox
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/abamapp/: CMakeLists.txt  main.cpp
src/apps/formotionapp/: CMakeLists.txt  DirManager.cpp  DirManager.h  main1.cpp  xmlUtils.cpp  xmlUtils.h
src/apps/graycodeapp/: CMakeLists.txt  main.cpp
src/apps/royalroadapp/: CMakeLists.txt  main.cpp
src/apps/trackapp/: CMakeLists.txt  Track.cpp  Track.h  TrackFeature.cpp  TrackFeature.h  TrackFlow.cpp  TrackFlow.h  TrackMSTargetBase.cpp  TrackMSTargetBase.h  TrackMSTargetColor.cpp  TrackMSTargetColor.h  TrackMSTargetRGB.cpp  TrackMSTargetRGB.h  TrackMSTargetSIFT.h  TrackMatch.cpp  TrackMatch.h  TrackMeanShift.cpp  TrackMeanShift.h  TrackParticleFilter.h  TrackSAC.cpp  TrackSAC.h  fastmap.h  main.cpp  mli.cpp  mli.h  track.cpp  track.h  trackFeature.cpp  trackFeature.h  trackFlow.cpp  trackFlow.h  trackMSTargetColor.cpp  trackMSTargetColor.h  trackMSTargetRGB.cpp  trackMSTargetRGB.h  trackMSTargetSIFT.h  trackMatch.cpp  trackMatch.h  trackMeanShift.cpp  trackMeanShift.h  (+3 more)
src/libs/: CMakeLists.txt
src/libs/evo/: CFRR2.cpp  CMakeLists.txt  CRR2.cpp  ESDna.h  GrayCode.cpp  Logger.cpp  Population.cpp  RoyalRoad.cpp  Seq.cpp  Stats.cpp
src/libs/learn/: Abam.cpp  CMakeLists.txt
src/libs/visio/: Buf.cpp  CMakeLists.txt  KernelLayer.cpp  Layer.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5A.cpp  Level5B.cpp  Level6.cpp  Parameters.cpp
test/: CMakeLists.txt
test/evo_test/: CMakeLists.txt  EvoTest.cpp
test/learn_test/: CMakeLists.txt  LearnTest.cpp
tools/share/: adaptics.env
tools/share/cmake/: FindLog4Cxx.cmake
